US7225 - More code merging from card

--- a/Discover-Launch/assets/www/card/html/edo/edoLandingPage.html
+++ b/Discover-Launch/assets/www/card/html/edo/edoLandingPage.html
@@ -111,8 +111,8 @@
                 </div>
                 <div class="overlayBtn divider txtcenteraln r3matchbtn">
                 	<div data-role="button" id="overlayShowExtras" class="close-overlay">Show Extras</div>
-					 <!-- br/ >
-					   <a href="#" id="closebtn_landing" class="bluelink boldtext ui-link close-overlay" >Cancel</a -->  
+					 <br/>
+					   <a href="#" id="closebtn_landing" class="bluelink boldtext ui-link close-overlay" >Cancel</a>  
                 </div>
             </div>
   </div>
