--- a/Discover-Launch/assets/www/card/html/p2p/howItWorks.html
+++ b/Discover-Launch/assets/www/card/html/p2p/howItWorks.html
@@ -41,7 +41,7 @@
 						<p>Your recipient logs in, or signs up for a Paypal
 							account to retrieve the payment.</p></li>
 				</ol>
-				<h3>The fast, free way to send money securely to anyone.</h3>
+				<h3>The fast, way to send money securely to anyone.</h3>
 				<!--<p></p>-->
 				<ul class="bullate01">
 					<li><p>All you need to send money is the recipient's e-mail
