--- a/Discover-Launch/assets/www/card/html/rewards/directDeposit1.html
+++ b/Discover-Launch/assets/www/card/html/rewards/directDeposit1.html
@@ -37,11 +37,7 @@
 				<h1>Direct Deposit</h1>
 				<!-- h2>Review</h2 -->
 
-				<p class="fontsize13px">Deposit your Cashback Bonus Rewards directly into your bank
-					account in $50 increments. This action is final and cannot be
-					undone. Direct deposits will post within 72 hours to a bank account
-					associated to this ID. Deposits may only be made in increments of
-					$50.</p>
+				<p class="fontsize13px">Deposit your Cashback Bonus Rewards directly into your bank account in $50.00 increments. The requested deposit should be presented to your designated financial institution within 72 hours.</p>
 				<ul
 					class="white-box-rd-corner ui-listview ui-listview-inset ui-corner-all ui-shadow"
 					data-inset="true" data-theme="d" data-role="listview">
@@ -91,12 +87,12 @@
 
 				<p>
 				<h3>
-					<ul class='collapsible'>
+					<!--<ul class='collapsible'>
 						<li><a href="#" class='collapslink deactive'
 							rel='directDeposit1_TermsConditions'>Direct Deposit Terms and Conditions</a>
 							<div id="directDeposit1_TermsConditions" style='display: none;'></div>
 						</li>
-					</ul>
+					</ul>-->
 				</h3>
 				</p>
 			</div>
