--- a/Discover-Launch/assets/www/card/html/rewards/directDeposit2.html
+++ b/Discover-Launch/assets/www/card/html/rewards/directDeposit2.html
@@ -33,7 +33,9 @@
 					</div>
 					<h2>Step 2 of 3</h2 -->
 					<!-- h2>Verify</h2 -->
-					<p>Please confirm to redeem you Cashback Bonus for the following Direct Deposit.</p>
+					<p><!--Please confirm to redeem you Cashback Bonus for the following Direct Deposit.-->
+                    	Electronic Deposits cannot be stopped or reversed once processing begins. The requested deposit should be presented to your designated financial institution within 72 hours. By tapping 'Confirm' you hereby authorize Discover Bank to make a one-time credit of your rewards to the chosen account.
+                    </p>
 					
 						<ul class="whitebg-list-view">
 							<li>Date <span id="div11" class="boldtext fontsize13px"><span id="directDeposit2_RedeemDate"></span></span></li>
