--- a/Discover-Launch/assets/www/card/html/rewards/redeemFaqs.html
+++ b/Discover-Launch/assets/www/card/html/rewards/redeemFaqs.html
@@ -95,7 +95,7 @@ The time it takes to receive your reward varies based on your redemption:
 				<div class="ui-block-b">
 				    <a href="javascript:void(0)" class="rdfaq-que-link">Do I have to redeem all of my <i>Cashback bonus</i> one time?</a>
 				    <div class="rdfaq-hidden-element">
-				    No, you do not have to redeem all of your <i>Cashback Bonus</i> at one time. You can choose to redeem some or all of your <i>Cashback Bonus </i>–minimum redemption amounts vary by option. 
+				    No, you do not have to redeem all of your <i>Cashback Bonus</i> at one time. You can choose to redeem some or all of your <i>Cashback Bonus </i>â€“minimum redemption amounts vary by option. 
 				    </div>
 			        </div>
 				<div class="ui-block-a">
@@ -110,7 +110,7 @@ The time it takes to receive your reward varies based on your redemption:
 				    <a href="javascript:void(0)" class="rdfaq-que-link">What are eCertificates?</a>
 				    <div class="rdfaq-hidden-element">
 				    eCertificates are a way to get rewards faster instead of waiting to receive a Partner Gift Card by mail. eCertificates are available immediately upon completing your order, and allow you to shop instantly with the Partner. 
-				    <b>Note:</b> Please be aware that all Partners do not offer eCertificates. If the Partner does offer an eCertificate, you must select the eCertificate option in order to receive it.
+				    <b>Note:</b>Â Please be aware that all Partners do not offer eCertificates. If the Partner does offer an eCertificate, you must select the eCertificate option in order to receive it.
 
                     </div>
 			        </div>
@@ -281,7 +281,7 @@ Representative will assist you.
 				<div class="ui-block-b">
 				    <a href="javascript:void(0)" class="rdfaq-que-link">Are there certain states where I cannot redeem for a Discover Gift Card? </a>
 				    <div class="rdfaq-hidden-element">
-				 Cardmembers who live in the following states cannot redeem for Discover Gift Cards: Colorado, Connecticut, Hawaii, Maine, New Hampshire, New Jersey, Rhode Island, Tennessee, and Vermont.
+				 Cardmembers who live in the following states cannot redeem for Discover Gift Cards:Â Colorado, Connecticut, Hawaii, Maine, New Hampshire, New Jersey, Rhode Island, Tennessee, and Vermont.
 				    </div>
 			        </div>
 				<div class="ui-block-a">
