--- a/Discover-Launch/assets/www/card/html/rewards/redeemPartnerECT2.html
+++ b/Discover-Launch/assets/www/card/html/rewards/redeemPartnerECT2.html
@@ -89,7 +89,7 @@
                             </div -->
 
                         </div>
-						<p class="padd-all-10 terms-note">Not for sale or shipment to residents of CO, HI, ME, NJ, TN and VT. A $2.50 per month servicing fee applies after 12 consecutive months of non-use after activation except where prohibited by law.</p>
+						<p class="padd-all-10 terms-note">Not for sale or shipment to residents of CO, CT, HI, ME, NH, NJ, RI, TN and VT. A $2.50 per month servicing fee applies after 12 consecutive months of non-use after activation except where prohibited by law.</p>
                         <div class="padd-all-10 terms-note">
                         	<p>By clicking Redeem, you hereby agree to the</p>
                             <a href="#" id="mercntTerms" class="link-style-3">Partner Terms &amp; Conditions.</a>
