--- a/Discover-Launch/assets/www/card/html/rewards/statementCredit1.html
+++ b/Discover-Launch/assets/www/card/html/rewards/statementCredit1.html
@@ -56,12 +56,12 @@
 				</div><br/>
 
 				<p class="boldtext">Credits will post to your account with in 72 hours.</p>
-				<p class="bottomPara">Have a redemption question? Please call &nbsp;	<a href='tel:8003472683' class='eCertBlueLink'>800.347.2683</a></p>				
-				<ul class='collapsible'>
+				<p class="bottomPara">Have a redemption question? Please call &nbsp;	<a href='tel:8003472683' class='eCertBlueLink'>1-800-347-2683</a></p>				
+				<!--<ul class='collapsible'>
 					<li><a href="#" class='collapslink deactive' rel='statementCredit1_TermsConditions'>Statement Credit Terms and Conditions</a>
 					<div id="statementCredit1_TermsConditions" style='display: none;'></div>
 				</li>
-				</ul>
+				</ul>-->
 			</div>
 
 			<div id="footnotes"  class="footnotes"></div>
