--- a/Discover-Launch/assets/www/card/html/rewards/statementCredit3.html
+++ b/Discover-Launch/assets/www/card/html/rewards/statementCredit3.html
@@ -58,7 +58,7 @@
 					<!-- span id="div41"  class="fontsize13px boldtext">ending in<span id="statementCredit3_CreditCardEnding" style="margin-left:3px"></span></span --></li>
 				</ul>
 				<br/>
-				<p>Have a redemption question? Please call <a href='tel:8003472683' onClick='trackThis(); return true' class='eCertBlueLink'>800.347.2683</a></p>
+				<p>Have a redemption question? Please call <a href='tel:8003472683' onClick='trackThis(); return true' class='eCertBlueLink'>1-800-347-2683</a></p>
 			</div>
 			<div id="footnotes"  class="footnotes"></div>
 		</div>
