US7225 - More code merging from card

--- a/Discover-Launch/assets/www/card/html/edo/edoLandingPage.html
+++ b/Discover-Launch/assets/www/card/html/edo/edoLandingPage.html
@@ -58,7 +58,8 @@
                         </div>
                     </div>
                 </div>
-				<span id = "edoDetailsDisplay"></span>	
+				<div class="clearboth"></div>
+				<div id = "edoDetailsDisplay"></div>	
 						<!--<div class="btmBtns">
                 	<div data-role="button" class="viewMoreOffers" onclick="dfs.crd.edo.ViewMoreEDO()">View More</div>
                 </div>-->
