--- a/Discover-Launch/assets/www/card/html/payments/paymentsHistory.html
+++ b/Discover-Launch/assets/www/card/html/payments/paymentsHistory.html
@@ -16,11 +16,12 @@
 		<div data-role="content" class="ui-content-internalpages">
 			<div class="wraper">
 				<h1>Payment History</h1>
-
-				 <span id="paymentsHistory_paymentHistory"></span> 
-                <span id = "errorPaymentsHistoryDiv"></span>
+				<div class="padding10pxLeftright">
+						<span id ="errorPaymentsHistoryDiv"></span>
+				</div>
+				<span id="paymentsHistory_paymentHistory"></span> 
 				
-				<div class="txtcenteraln" style="margin: 10px 0 10px 0;" >
+				<div class="txtcenteraln">
 					<a class="small_btn" data-role="button" onclick="navigation('paymentStep1');" href="#">Make a Payment </a>
 				</div>
 
