--- a/Discover-Launch/assets/www/card/html/achome/accountLanding.html
+++ b/Discover-Launch/assets/www/card/html/achome/accountLanding.html
@@ -15,7 +15,7 @@
 		<!-- content start -->
 		<div data-role="content" class="ui-content-internalpages">
 			<div class="wraper">
-                <h1>Statements</h1>
+                <!--<h1>Statements</h1>-->
 				<!-- ul data-role="listview" data-theme="d" data-inset="true" id="list1"
 					class="account-list-view">
 					<li data-icon="false">
