US7225 - More code merging from card

--- a/Discover-Launch/assets/www/card/html/rewards/directDepositConfirmCancelTrans.html
+++ b/Discover-Launch/assets/www/card/html/rewards/directDepositConfirmCancelTrans.html
@@ -22,16 +22,16 @@
 					
 					<div>
 						<p>
-							Your transaction was cancelled at your request and <br />
+							Your transaction was cancelled at your request and 
 							your card will not be charged.
 						</p>
 					</div>
 
 				<div class="txtcenteraln">
-					<a class="small_btn" data-role="button" onclick="directDeposit()" href="#" style="width:160px;">Start Over</a>
+					<a class="small_btn" data-role="button" onclick="navigation('../rewards/redemptionLanding')" href="#" style="width:160px;">Start Over</a>
 				</div>
 				<div class="txtcenteraln">
-					<a class="small_btn" data-role="button" onclick="gotoAchome()"  href="#" style="width:160px;">Go Home </a>
+					<a class="small_btn" data-role="button" onclick="navigation('../achome/cardHome')"  href="#" style="width:160px;">Go Home </a>
 				</div>
 				
 				<!-- body text area end -->
