--- a/Discover-Launch/assets/www/card/html/rewards/statement_credit_Confirm_CancelTrans.html
+++ b/Discover-Launch/assets/www/card/html/rewards/statement_credit_Confirm_CancelTrans.html
@@ -21,7 +21,7 @@
 					
 					<div>
 						<p>
-							Your transaction was cancelled at your request and <br />
+							Your transaction was cancelled at your request and
 							your card will not be charged.
 						</p>
 					</div>
