--- a/Discover-Launch/assets/www/card/html/edo/edoLandingPage.html
+++ b/Discover-Launch/assets/www/card/html/edo/edoLandingPage.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                 </div -->
-				<div class="faqWraper"><div class="rd-faq-main"><img src="../../images/icon_faqs.png" class="icon_faqs"/></div></div>
+				<!-- div class="faqWraper"><div class="rd-faq-main"><img src="../../images/icon_faqs.png" class="icon_faqs"/></div></div -->
 				<!--div class="rd-landing-heading-text"><h1>EXTRAS</h1></div -->
                 
                 <div id="exclusiveEDOOffer"></div>
