--- a/Discover-Launch/assets/www/card/html/p2p/confirmCancelTransaction.html
+++ b/Discover-Launch/assets/www/card/html/p2p/confirmCancelTransaction.html
@@ -26,7 +26,7 @@
 					
 					<div>
 						<p>
-							Your transaction was cancelled at your request and <br />
+							Your transaction was cancelled at your request and 
 							your card will not be charged.
 						</p>
 					</div>
