US7225 Card Code Merge Take 2

--- a/Discover-Launch/assets/www/card/html/p2p/sendMoney2.html
+++ b/Discover-Launch/assets/www/card/html/p2p/sendMoney2.html
@@ -16,7 +16,7 @@
 		<!-- header end -->
         <div class="progress-indicator pos-center">
 			<ul>
-			    <li><a href="#" class="ui-link">1. Review/Edit</a></li>
+			    <li><a href="#" class="visited ui-link">1. Review/Edit</a></li>
                 <li><a href="#" class="active ui-link">2. Verify</a></li>
                 <li><a href="#" class="ui-link">3. Confirmation</a></li>
 			</ul>
