--- a/Discover-Launch/assets/www/card/html/profile/personalizeCashPin2.html
+++ b/Discover-Launch/assets/www/card/html/profile/personalizeCashPin2.html
@@ -13,9 +13,10 @@
 		</div>
 		<div class="progress-indicator">
                 <ul>
-                    <li><a href="#">Enter</a></li>
+                    <li><a href="#" class="visited">Enter</a></li>
                     <li><a href="#" class="active">Confirmation</a></li>
                 </ul>
+				<div class="clearboth"></div>
             </div>   
 		<!-- header end -->
 		<!-- content start -->
@@ -24,11 +25,11 @@
 				<!--<h1>Personalize Cash PIN:</h1>
 				<h2>Step 2 of 2</h2>-->
 				<div id="last4"><h3>Discover Card Ending 0000</h3></div>
-				<p>We'll send you an email confirmation shortly.</p>
+				<!-- p>We'll send you an email confirmation shortly.</p>
 				<p>
 					If you have any questions, please call <a href='tel:18003472683' onClick='trackThis(); return true' class='bluelink'>1-800-DISCOVER(1-800-347-2683)</a>.
-				</p>
-				
+				</p -->
+				<p>Your new PIN is activated and ready to use.</p>
 				<ul class="collapsible">
 					<li><a href="#" class="collapslink deactive" rel="collaps1">Information About Cash Advances</a> </li>
 				</ul>
