--- a/Discover-Launch/assets/www/card/html/rewards/cashbackBonusSignup1.html
+++ b/Discover-Launch/assets/www/card/html/rewards/cashbackBonusSignup1.html
@@ -18,9 +18,9 @@
 			<!-- content start -->
 		<div data-role="content" class="ui-content-internalpages">
 		<div class="wraper">
-					<div>
+					<!-- div>
 						<h1>Sign Up for <i>CashBack Bonus</i></h1>
-					</div>
+					</div -->
 					 
 					 <ul id="cashbackBonusSignup_promotionList"></ul>
 					 
