--- a/Discover-Launch/assets/www/card/html/rewards/directDepositConfirmCancelTrans.html
+++ b/Discover-Launch/assets/www/card/html/rewards/directDepositConfirmCancelTrans.html
@@ -31,7 +31,8 @@
 					<a class="small_btn" data-role="button" onclick="navigation('../rewards/redemptionLanding')" href="#" style="width:160px;">Start Over</a>
 				</div>
 				<div class="txtcenteraln">
-					<a class="small_btn" data-role="button" onclick="navigation('../achome/cardHome')"  href="#" style="width:160px;">Go Home </a>
+				<!-- Defect Fixed 97075 -->
+					<a class="small_btn" data-role="button" onclick="gotoAchome();"  href="#" style="width:160px;">Go Home </a>
 				</div>
 				
 				<!-- body text area end -->
