--- a/Discover-Launch/assets/www/card/html/rewards/milesSignup1.html
+++ b/Discover-Launch/assets/www/card/html/rewards/milesSignup1.html
@@ -15,7 +15,7 @@
 		<!-- content start -->
 		<div data-role="content" class="ui-content-internalpages">
 			<div class="wraper">
-				<h1>Earn More Miles Rewards</h1>		
+				<!-- h1>Earn More Miles Rewards</h1 -->		
 				<p>
 					Miles Rewards Balance: <span class="orangetxt boldtext" id="milesSignup1_CashBackbonusBalance"></span>
 				</p>
