--- a/Discover-Launch/assets/www/card/html/rewards/redemptionLanding.html
+++ b/Discover-Launch/assets/www/card/html/rewards/redemptionLanding.html
@@ -21,8 +21,8 @@
                     </section>
             <!-- Middle content start from here-->
             <div data-role="content" class="pglist">
-            	<div id="pgPadding"></div>
-                <div class="faqWraper"><div class="rd-faq-main"><img src="../../images/icon_faqs.png" class="icon_faqs"/></div></div>
+            	<!-- div id="pgPadding"></div -->
+                <!-- div class="faqWraper"><div class="rd-faq-main"><img src="../../images/icon_faqs.png" class="icon_faqs"/></div></div -->
 				<div class="rd-landing-heading-text"><h1>Redeem <i>Cashback Bonus</i></h1></div>
                <ul class="whitebg-list-view" data-role="listview" data-theme="d" data-inset="true">
                     <li>
