--- a/Discover-Launch/assets/www/card/html/p2p/sendMoney1.html
+++ b/Discover-Launch/assets/www/card/html/p2p/sendMoney1.html
@@ -35,7 +35,7 @@
 				</div -->
 				<!--<h2>Step 1 of 3</h2>-->
 
-				<p id="errorTitle" style="color: red; font: 10px; display: none">
+				<p id="errorTitle" style="color: red; font-size: 13px; display: none">
 					<b>Your request cannot be processed. Please review and update
 						the highlighted area(s) below.</b>
 				</p>
@@ -49,7 +49,7 @@
 					class="noborder">
 					<li style="overflow: visible"><label><b>Full Name or Nickname</b> </label>
 						<div>
-							<div id='name_msg' style="color: red; font: 10px"></div>
+							<div id='name_msg' class="errormsg2"></div>
 							<div>
 								<input type="text" name="name" id="fullname"
 									placeholder="Full Name or Nickname"
@@ -59,8 +59,8 @@
 									<ul id="list1" class="autoUL"></ul>
 								</div>
 							</div>
-							<div id='emailorphone_msg' style="color: red; font: 10px"></div>
 							<label><b>Email or Mobile Phone</b> </label>
+                            <div id='emailorphone_msg' class="errormsg2"></div>
 							<div>
 								<input type="text" name="name" id="emailOrphone"
 									onKeyup="dfs.crd.p2p.autoFetchEmails();"
@@ -89,7 +89,7 @@
 									<label><b>Amount</b> </label>
 								</div>
 								<div id="div12">
-									<div id='amount_msg' style='color: red; font: 10px'></div>
+									<div id='amount_msg' class="errormsg2"></div>
 									<div>
 										<!-- b class="fontsize13px">$</b -->
 										<input class="amount margintop10px" type="number" name="name"
