--- a/Discover-Launch/assets/www/card/html/rewards/IneligibleError_discoverGiftCards.html
+++ b/Discover-Launch/assets/www/card/html/rewards/IneligibleError_discoverGiftCards.html
@@ -8,7 +8,8 @@
         
         <body>
                 <!--page start --> 
-                <div data-role="page" id="redm-error-pg" class="rd-page">
+                <!-- Changes related to page id for header title -->
+                <div data-role="page" id="redmdgc-error-pg" class="rd-page">
                         <!--header start -->
            <div data-role="header" id="pg-header" data-id="myHeaderDiscover" data-position="fixed" data-tap-toggle="false">
                  <header id="header" class="cmn_header">
