US7033 Card Bank Integration - Friday 5-24 merge

--- a/Discover-Launch/assets/www/card/html/edo/noOffer.html
+++ b/Discover-Launch/assets/www/card/html/edo/noOffer.html
@@ -21,7 +21,8 @@
 			<div class="wraper">
 				<h1>Thanks for visiting</h1>
                 <p class="error">At this time we don't have any Extras available. Be sure to check back soon, to find new offers you can take advantage of.</p>
-                <a href="#" >Redeem your <i>Cashback Bonus</i> for eCertificates, Partner Giftcards and more.</a>
+                <!-- Commented for fixing defect 93958 -->
+                <!-- <a href="#" >Redeem your <i>Cashback Bonus</i> for eCertificates, Partner Giftcards and more.</a> -->
 			</div>
 			<div class="clearboth"></div>
 			<div id="footnotes" class="footnotes">
