--- a/Discover-Launch/assets/www/card/html/profile/personalizeCashPinError.html
+++ b/Discover-Launch/assets/www/card/html/profile/personalizeCashPinError.html
@@ -16,7 +16,7 @@
 		<div data-role="content" class="ui-content-internalpages">
 			<div class="wraper"> 
 				<div id="name">
-					<h1>Personalize Cash PIN:</h1>
+					<!-- Commented to fix defect 97205 <h1>Personalize Cash PIN:</h1> -->
 				</div> 
 				<div class="errormsg" style="display:block">
 					We're sorry. We are unable to process your request at this time. Please call <a href="tel:+18003472683" class="bluelink">1-800-DISCOVER</a> <a href="tel:+18003472683" class="bluelink">(1-800-347-2683)</a> if you have further questions.
