--- a/Discover-Launch/assets/www/card/html/profile/personalizeCashPin1.html
+++ b/Discover-Launch/assets/www/card/html/profile/personalizeCashPin1.html
@@ -27,20 +27,22 @@
 				<div id="errormsg" class="errormsg" style="display:block">
 						Sorry. Your new PIN and re-entered PIN must match.<br/>Please re-enter it again.  
 				</div>
-				<ul data-role="listview" data-theme="d" data-inset="true"
-					class="white-box-rd-corner">
-					<li><label class="boldtext">Enter New PIN:</label>
+				<div class="pinCashEnter">
+					<div class="col" style="margin-right:5px">
+						<label class="boldtext">Enter New PIN:</label>
 						<div>
 							<input type="password" name="enterPin" id="enterPin" value=""
 								maxlength="4" class="inputtext" />
-						</div></li>
-					<li><label class="boldtext">RE-enter New PIN:</label>
-						
+						</div>
+					</div>	
+					<div class="col">
+						<label class="boldtext">RE-enter New PIN:</label>
 						<div>
 							<input type="password" name="confirmPin" id="confirmPin" value=""
 								maxlength="4" class="inputtext" />
-						</div></li>
-				</ul>
+						</div>
+					</div>
+				</div>
 				<!--<h3>Tips for a Secure PIN</h3>-->
 				
 				<div>
