US7033 Card / Bank Code Merge 2013-05-27

--- a/Discover-Launch/assets/www/card/html/payments/paymentStep1.html
+++ b/Discover-Launch/assets/www/card/html/payments/paymentStep1.html
@@ -138,7 +138,7 @@
 					<!--	<div>
 							<p>Payments made after 5p.m. Eastern Time<br/>will post on next business day<br/></p>
 						</div> -->
-						<div class="margintop5px" id="impOnlinePayment">
+						<div class="margintop5px">
 							<a href="#" onclick="navigation('paymentInformation');" class="bluelink boldtext" >Important Information about Online Payments</a>
 						</div>
 
