--- a/Discover-Launch/assets/www/card/html/referAFriend/referralStatusMilesSuccess.html
+++ b/Discover-Launch/assets/www/card/html/referAFriend/referralStatusMilesSuccess.html
@@ -31,11 +31,11 @@
                 <div class="referral-detail"><div class="close" id="close-referral-detail"></div><span>You've just referred nancy@gmail.com to Discover.We'll notify you through email each time a friend is approved. If your friend becomes a Cardmember you'll get $50 Cashback Bonus!</span></div>
                 
                 <div class="referral-data">
-                	<div class="divider"></div>
+                	<!--<div class="divider"></div>-->
                 	<span class="floatleft textcenter successful-referrals">Successful Referrals</span>
                 	<span class="floatright textcenter earnedHeading"> Earned</span>
                 	<div class="white-div">
-                		<img class="floatleft" src="../../images/raf-social.png"/>
+                		<img class="floatleft" src="../../images/raf-social.png" width="34" height="32" />
                 		<span class="successful-referrals floatleft textcenter"><span id="count-success-dynamicfield">4</span> Friends</span>
                 		<span class="floatright earned-value" id="miles-success-dynamicfield">20,000<span class="miles-size">miles</span></span>
 	                </div>
