Fixing cherry pick merge conflicts

--- a/Discover-Launch/assets/www/card/html/referAFriend/referralStatusMilesSuccess.html
+++ b/Discover-Launch/assets/www/card/html/referAFriend/referralStatusMilesSuccess.html
@@ -21,12 +21,12 @@
 						<img src="../../images/icon_faqs.png" class="icon_faqs" width="32" height="33"/>
                     </a>
 				</h1 -->
-				<div class="faqWraper"><div class="rd-faq-main">
+				<!--<div class="faqWraper"><div class="rd-faq-main">
 					<a href="#" onclick="navigation('../rewards/redeemFaqs');">  
 						<img src="../../images/icon_faqs.png" class="icon_faqs" width="32" height="33"/>
                     </a>
-				</div></div>
-				<div class="rd-landing-heading-text"><h1>Referral Status</h1></div>
+				</div></div>-->
+				<div><h1>Referral Status</h1></div>
 				
                 <div class="referral-detail"><div class="close" id="close-referral-detail"></div><span>You've just referred nancy@gmail.com to Discover.We'll notify you through email each time a friend is approved. If your friend becomes a Cardmember you'll get $50 Cashback Bonus!</span></div>
                 
