--- a/Discover-Launch/assets/www/card/html/rewards/milesRedeem.html
+++ b/Discover-Launch/assets/www/card/html/rewards/milesRedeem.html
@@ -24,7 +24,7 @@
 				<div class="txtcenteraln r3matchbtn">
 						<a href="#" class="small_btn_110px"  onclick="redirectToPageAfterConfirm('DISCOVERLINK')" 
 						 data-role="button" data-theme="c">Continue</a><br/>
-                        <a href="#" class="bluelink boldtext" data-rel='back'>Cancel</a>
+                        <a href="#" class="bluelink boldtext" onclick="onBackKeyDown();" >Cancel</a>
 				</div>					
 			</div>
 
