US7225 - More code merging from card

--- a/Discover-Launch/assets/www/card/html/payments/paymentStep1.html
+++ b/Discover-Launch/assets/www/card/html/payments/paymentStep1.html
@@ -102,7 +102,10 @@
 								<div class="clearboth"></div>
 							</div>
 						</div>
-						<a href="javascript:void(0)" class="bluelink latepaywarn" onclick="dfs.crd.pymt.MAPStep1PayWarnClick();">Late and Minimum Payment warning</a>
+						<div class="latepaywarn"> 
+<a href="javascript:void(0)" class="bluelink" onclick="navigation('lateMinPayWarn');">Late and Minimum Payment warning</a>
+</div>
+
 						<ul class="nobg_2coltbl" style="margin-top: 4px;">
 							<li><span class="errormsg" id="errorPostingDate"></span>
 								<div class="col1" style="line-height: 24px;">Payment Date</div>
