--- a/Discover-Launch/assets/www/card/html/referAFriend/referralStatusNoReferrals.html
+++ b/Discover-Launch/assets/www/card/html/referAFriend/referralStatusNoReferrals.html
@@ -23,12 +23,12 @@
                     </a>
 				</h1 -->
 				
-				<div class="faqWraper"><div class="rd-faq-main">
+				<!--<div class="faqWraper"><div class="rd-faq-main">
 					<a href="#" onclick="navigation('../rewards/redeemFaqs');">  
 						<img src="../../images/icon_faqs.png" class="icon_faqs" width="32" height="33"/>
                     </a>
-				</div></div>
-				<div class="rd-landing-heading-text"><h1>Referral Status</h1></div>
+				</div></div>-->
+				<div><h1>Referral Status</h1></div>
 				
                  <div class="referral-detail">
                  	<div class="close" id="close-referral-detail"></div>
