--- a/Discover-Launch/assets/www/card/html/payments/lateMinPayWarn1.html
+++ b/Discover-Launch/assets/www/card/html/payments/lateMinPayWarn1.html
@@ -16,7 +16,7 @@
 	<div class="wraper">
 		<!-- h1>Late Payment warning </h1 -->
 			<h2>Late Payment warning </h2>
-			<p>If we do not receive your minimum payment by the date listed above, you may have to pay a late fee of up to $<span id="lateFeeWarningAmount">35.00</span> and your purchase and balance transfer APRs for new transaction may be increased up to the Penalty APR of <span id="latePayAprRate">14.99</span>% variable. 
+			<p id="latePayWarnText">If we do not receive your minimum payment by the date listed above, you may have to pay a late fee of up to $<span id="lateFeeWarningAmount">35.00</span> and your purchase and balance transfer APRs for new transaction may be increased up to the Penalty APR of <span id="latePayAprRate">14.99</span>% variable. 
 			</p></br>
 			<h2>Minimum Payment Warning</h2>
 			<p>If you make only the minimum payment each period, you will pay more in interest and it will take you longer to pay off your balance. For example:</p></br>
