--- a/Discover-Launch/assets/www/card/html/payments/lateMinPayWarnNoMinPay.html
+++ b/Discover-Launch/assets/www/card/html/payments/lateMinPayWarnNoMinPay.html
@@ -16,7 +16,7 @@
 			<div class="wraper">
 				<!-- h1>Late Payment warning </h1 -->
 				<h2>Late Payment warning</h2>
-				<p>If we do not receive your minimum payment by the date listed above, you may have to pay a late fee of up to $<span id="noMinPaylateFeeWarningAmount">35.00</span> and your purchase and balance transfer APRs for new transaction may be increased up to the Penalty APR of <span id="noMinPaylatePayAprRate">14.99</span>% variable. 
+				<p id="latePayWarnText">If we do not receive your minimum payment by the date listed above, you may have to pay a late fee of up to $<span id="noMinPaylateFeeWarningAmount">35.00</span> and your purchase and balance transfer APRs for new transaction may be increased up to the Penalty APR of <span id="noMinPaylatePayAprRate">14.99</span>% variable. 
 			</p></br>
 				<div id="footnotes" class="footnotes"></div>
 			</div>
