US7225 - More code merging from card 5/30

--- a/Discover-Launch/assets/www/card/html/common/moreLandingRevised.html
+++ b/Discover-Launch/assets/www/card/html/common/moreLandingRevised.html
@@ -15,7 +15,7 @@
 		<!-- content start -->
 		<div data-role="content" class="ui-content-internalpages">
 			<div class="wraper">
-				<div id="showMoreLinks"></div>
+				<div id="showMoreLinks_revised"></div>
 			</div>
 
 			<div id="footnotes" class="footnotes"></div>
