US7225 - More code merging from card 5/31

--- a/Discover-Launch/assets/www/card/html/payments/lateMinPayWarn1.html
+++ b/Discover-Launch/assets/www/card/html/payments/lateMinPayWarn1.html
@@ -40,7 +40,7 @@
 					<ul>
 						<li class="col1">$<span id="defaultTermsPaymentAmount">250</span></li>
 						<li class="col2" id="defaultTermYears">3years</li>
-						<li class="col3">$<span id="defaultTermTotalAmount">9,003 </span>(savings=$<span id="defaultTermSavingsAmount">2,445</span>)</li>
+						<li class="col3">$<span id="defaultTermTotalAmount">9,003 </span><br />(savings=$<span id="defaultTermSavingsAmount">2,445</span>)</li>
 					</ul>
 				</li>
 			</ul>
