--- a/Discover-Launch/assets/www/card/html/pushNotification/manageAlerts.html
+++ b/Discover-Launch/assets/www/card/html/pushNotification/manageAlerts.html
@@ -446,13 +446,14 @@
 								<div class="ui-grid-b">
 									<div class="ui-block-a otherInputWidth"></div>
 									<div class="add-msg-dot-com hidden">
-										<div>
-                                            <div class="at-rate">@&nbsp;</div>
+										<div class="floatright">
+                                            <div class="at-rate">
+											<span class="at_align">@&nbsp;</span>
 											<input id="custom-carrier" type="email" placeholder="" class="dot-com"/>
-                                            <span class="eg-msg">(e.g.,messaging.nextel.com)</span>
-<div class="clearboth"></div>
+                                            <span class="eg-msg floatleft">(e.g.,messaging.nextel.com)</span>
+                                            </div>
                                         </div>
-<div class="clearboth"></div>
+										<div class="clearboth"></div>
 									</div>
 								</div>
 							</div>
