US7225 - 13.3 code merging from card 6/4 - Launch code from clear case

--- a/Discover-Launch/assets/www/card/html/pushNotification/manageAlerts.html
+++ b/Discover-Launch/assets/www/card/html/pushNotification/manageAlerts.html
@@ -320,7 +320,9 @@
 												</li>
 											</div>
 									</ul>
-									<ul class="whitebg-list-view">
+									<!--13.3 Change Defect Fix :97620 -->
+									<ul class="whitebg-list-view" id="conditionalRewardHide">
+									  <!--13.3 Change Defect Fix :97620 -->
 										<li class="hideLiMain 5CBB"><span class="pn-plus" style="background-position: 0px 0px;"></span><h3 class="bluetext">Maximize Your Rewards</h3></li>
 											<div class="hidden-element">
 												<li id="5CBB" class="hideLi 5CBB">
