US7225 - 13.3 - 06/13/2013 Clearcase Merge - Discover-Launch Project

--- a/Discover-Launch/assets/www/card/html/pushNotification/alertHistory.html
+++ b/Discover-Launch/assets/www/card/html/pushNotification/alertHistory.html
@@ -21,9 +21,9 @@
                 <div id="deleted_messages"></div>
                 <div id="red_textfont" style="color:#82868a"></div>
                 <div id="no_settings_saved" style="display: none" >Your changes have not been saved.</div>
-                <p class="main_heading_paragraph">Alerts over 45 days will be automatically deleted.
+                <!--<p class="main_heading_paragraph">Alerts over 45 days will be automatically deleted.
                 <br/>
-                </p>
+                </p>-->
                 
                 <div class="main_content" id="id-main-content">
                     <div class="ui-grid-c">
@@ -41,6 +41,9 @@
                     <div id="alerthistory">
                         <ul class="whitebg-list-view" id="comments-list"></ul>
                     </div>
+                    <div class="main_heading_paragraph">Alerts over 45 days will be automatically deleted.
+                	<span id="specialNotes">Dates are displayed in ET.</span> 
+                	</div>
                     <!-- Edit / Cancel / Delete Link Buttons -->
 					<div class="textcenter">
                     <a href="javascript:void(0)" data-role="button" data-inline="false" id="id_edit_btn" class="edit_btn">Edit</a>
@@ -50,8 +53,8 @@
 					</div>
                     <!-- Edit / Cancel / Delete Link buttons Ends here -->
                 </div>
-                <br/>
-                <div id="specialNotes">* Dates are displayed in ET</div> 
+                <br/>               
+ 
                 <br/>
                 <div id="footnotes" class="footnotes" >
                 </div>
