--- a/Discover-Launch/assets/www/card/html/loginLogout/cardLogin.html
+++ b/Discover-Launch/assets/www/card/html/loginLogout/cardLogin.html
@@ -21,8 +21,8 @@
                             <div class="errormsg" id="errorLoginInline" 
                                 style="margin-left: 30px; display: none"></div>
                             <input type="text" name="username" autocorrect="off" autocapitalize="off" id="uid"
-							placeholder="Credit Card User ID" value="6011000972496974" maxlength="16" /> 
-							<input type="password" name="password" id="pwd" value="ccccc" placeholder="Credit Card Password" maxlength="32"/>
+							placeholder="Credit Card User ID" value="" maxlength="16" /> 
+							<input type="password" name="password" id="pwd" value="" placeholder="Credit Card Password" maxlength="32"/>
                             
                             <div class="ui-grid-a" id="grid-1">
                                 <div class="ui-block-a">
