US7225 - 13.4 elements code merge 7/1 - Launch Project

--- a/Discover-Launch/assets/www/card/html/custormerService/faqCorp.html
+++ b/Discover-Launch/assets/www/card/html/custormerService/faqCorp.html
@@ -29,7 +29,7 @@
 						<div class="ui-block-b">
 							<a href="javascript:void(0)" class="rdfaq-que-link">Is the Discover Mobile App as secure as Discover.com?</a>
 							<div class="rdfaq-hidden-element">
-								The Discover Mobile App uses the same security standards as Discover.com. We ensure a high security level by never showing your account number, timing out each session after a period of inactivity, and by using your existing User ID and Password, which only you know.	
+								The Discover Mobile App uses the same security standards as Discover.com. We ensure a high security level by never showing your account number, timing out each section after a period of inactivity, and by using your existing User ID and Password, which only you know.	
 						</div>
                         </div>
 						<div class="ui-block-a">
